objects/Object311__c.object
<CustomObject>
    <fields>
        <fullName>Field10__c</fullName>
        <label>Field10</label>
        <scale>0</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Field1__c</fullName>
        <label>Field1</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Field2__c</fullName>
        <formula>true</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Field2</label>
        <type>Checkbox</type>
    </fields>
    <label>Object311</label>
    <nameField>
        <label>Object311 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Object311</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>